[package]
name = "carbon"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.11"
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }
arboard = "3.4"
